maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:48: error: not found: value Y
	} else if(Xd!=0 && getIndication(Xd-1,Y)==num-1) {
                                              ^